Fix account menu link visibility

--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -1163,13 +1163,13 @@ Menus
 	&--user-account,
 	&--user-login {
 		@media only screen and (min-width: 48em) {
-			&:first-child {
+			&.menu-item--first-user-account {
 				display: none !important;
 			}
 		}
 
 		@media only screen and (max-width: 47.99em) {
-			&:last-child {
+			&.menu-item--second-user-account {
 				display: none !important;
 			}
 		}
